--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Alexander Swensen <alex.swensen@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@alexswensen/mailgun-uploader": "^1.0.6",
+    "@alexswensen/mailgun-uploader": "^1.0.7-beta",
     "mjml": "^4.13.0"
   }
 }
